--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -22,6 +22,13 @@ jobs:
       - name: Run tests
         run: npm run test
 
+      - name: Publish Test Results
+        uses: EnricoMi/publish-unit-test-result-action/linux@v2
+        if: always()
+        with:
+          files: |
+            report/cucumber-report.json
+
       - name: List files in the repository
         run: |
           ls ${{ github.workspace }}
