--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -23,11 +23,10 @@ jobs:
         run: npm run test
 
       - name: Publish Test Results
-        uses: EnricoMi/publish-unit-test-result-action/linux@v2
-        if: always()
-        with:
-          files: |
-            report/cucumber-report.json
+        uses: deblockt/cucumber-report-annotations-action@v1.7
+          with:
+            access-token: ${{ secrets.GITHUB_TOKEN }}
+            path: "**/report/cucumber-report.json"
 
       - name: List files in the repository
         run: |
