--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,6 +1,9 @@
 name: GitHub Actions Demo
 run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
 on: [push]
+permissions:
+  checks: write
+  pull-requests: write
 jobs:
   playwirght-cucumber-tests:
     runs-on: ubuntu-latest
@@ -22,11 +25,12 @@ jobs:
       - name: Run tests
         run: npm run test
 
-      - uses: deblockt/cucumber-report-annotations-action@v1.7
+      - name: Publish Test Results
+        uses: EnricoMi/publish-unit-test-result-action@v2
         if: always()
         with:
-          access-token: ${{ secrets.GITHUB_TOKEN }}
-          path: "**/cucumber-report.json"
+          files: |
+            report/cucumber-report.xml
 
       - name: List files in the repository
         run: |
